@@ -1,3 +1,8 @@
+2001-08-13  Michael Meeks  <michael@ximian.com>
+
+	* gconf/Makefile.am (-DIID): rename to GNOME_Config_Daemon
+	to fit with the bonobo namespace guidelines.
+
 2001-08-13  Marco Pesenti Gritti  <mpeseng@tin.it>
 
 	* doc/gconf/gconf.sgml: small explanation about 
